[package]
name = "adyen-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
sqlx = {version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono",]}
