[package]
name = "adyen-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
config = "0.13.3"
env_logger = "0.10.0"
getset = "0.1.2"
home = "0.5.4"
log = "0.4.17"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono",]}
